--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -668,6 +668,15 @@ hr {
 
 /*FOOTER*/
 
+.main {
+ max-height: 550px;;
+ background-color: #292c2f;
+ color: white;
+ font-size: 38pt;
+ text-align: center;
+ line-height: 550px;
+}
+
 footer{
  position: fixed;
  bottom: 0;
